# FYP

./: .gitignore  Cargo.toml  README.md  pyvenv.cfg  requirements.txt  temp.py
PCB/: #auto_saved_files#  MicroMouse.kicad_prl  MicroMouse.kicad_pro  _autosave-MicroMouse.kicad_sch  ~MicroMouse.kicad_sch.lck
PythonAITraining/: firstAiTest.ipynb
PythonMazeInteraction/: DQN.ipynb  DQNParams.ipynb  DoubleDQN.ipynb  PPO.ipynb  PPO.py  dfs_solve.py  firstAiTest.ipynb  get_data.ipynb  results_log.csv  results_log2.csv  utils.py
PythonMazeInteraction/runs/CartPole-v1__test__1__1745154242/: events.out.tfevents.1745154242.AWInc.190122.0
PythonMazeInteraction/runs/CartPole-v1__test__1__1745154266/: events.out.tfevents.1745154266.AWInc.190122.1
PythonMazeInteraction/runs/CartPole-v1__test__1__1745154283/: events.out.tfevents.1745154283.AWInc.190122.2
PythonMazeInteraction/runs/CartPole-v1__test__1__1745154439/: events.out.tfevents.1745154439.AWInc.190122.3
PythonMazeInteraction/runs/CartPole-v1__test__1__1745154587/: events.out.tfevents.1745154587.AWInc.190122.4
PythonMazeInteraction/runs/CartPole-v1__test__1__1745157046/: events.out.tfevents.1745157046.AWInc.190122.5
PythonMazeInteraction/runs/CartPole-v1__test__1__1745157059/: events.out.tfevents.1745157059.AWInc.190122.6
PythonMazeInteraction/runs/CartPole-v1__test__1__1745157090/: events.out.tfevents.1745157090.AWInc.190122.7
PythonMazeInteraction/runs/CartPole-v1__test__1__1745157103/: events.out.tfevents.1745157103.AWInc.190122.8
RustMazeEnvironment/: Cargo.toml
RustMazeEnvironment/cli/: Cargo.toml
RustMazeEnvironment/cli/src/: cli.rs  constants.rs  handler_functions.rs  main.rs
RustMazeEnvironment/cli/src/exploring_algorithms/: mod.rs  wall_following.rs
RustMazeEnvironment/cli/src/solving_algorithms/: dfs_search.rs  dijkstra.rs  mod.rs
RustMazeEnvironment/lib/: Cargo.toml
RustMazeEnvironment/lib/src/: environment.rs  lib.rs  maze.rs
RustMazeEnvironment/lib/src/python_bindings/: python_binding.rs
RustMazeEnvironment/maze_library/: Cargo.toml  pyproject.toml
RustMazeEnvironment/maze_library/src/: constants.rs  direction.rs  environment.rs  environment_config.rs  lib.rs  map_vec_conversion.rs  maze.rs  maze_gen.rs  render.rs
RustMazeEnvironment/maze_library/src/exploring_algorithms/: explore_handler.rs  mod.rs  wall_following.rs
RustMazeEnvironment/maze_library/src/maze_gen/: binary_tree.rs  growing_tree.rs  kruzkals.rs  maze_gen_handler.rs  mod.rs  wilsons.rs
RustMazeEnvironment/maze_library/src/python_bindings/: environment_bindings.rs  environment_observations.rs  mod.rs  python_binding.rs  report_card.rs
RustMazeEnvironment/maze_library/src/render_system/: mod.rs  render.rs  render_coloured_mazes.rs  render_maze.rs
RustMazeEnvironment/maze_library/src/solving_algorithms/: dfs_search.rs  dijkstra.rs  mod.rs  solve_handler.rs
RustMazeEnvironment/maze_library/src/test_utils/: all_tiles_reachable.rs  mod.rs
RustMazeEnvironment/src/: environment.rs  lib.rs  main.rs  maze.rs  maze_gen.rs  maze_solve.rs  render.rs
src/: lib.rs  main.rs  maze.rs  maze_logic.rs  render.rs
(+6 files in other folders)
