[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.13"
pyo3 = { version = "0.23.4"}
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
union-find = "0.4.3"

[lib]
# Set the crate type to cdylib to support Python bindings
crate-type = ["cdylib"]
