[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.26"
macroquad = "0.4.13"
maze_library = { path = "../maze_library" }
rand = "0.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"



[[bin]]
name = "cli"
path = "src/main.rs"
