[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.23.5"}
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
macroquad = "0.4.13"
union-find = "0.4.3"

[lib]
# Set the crate type to cdylib to support Python bindings
crate-type = ["cdylib"]
