[package]
name = "maze_library"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
macroquad = "0.4.13"
union-find = "0.4.3"
pyo3 = { version = "0.23.5", optional = true }
log = "0.4.26"

[features]
python = ["pyo3"]    # Python feature depends on pyo3

[lib]
name = "maze_library"
path = "src/lib.rs"
crate-type = ["rlib"]  # Default library type

# Only include cdylib when python feature is enabled
[target.'cfg(feature = "python")'.lib]
crate-type = ["cdylib", "rlib"]
