[package]
name = "maze_library"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
macroquad = "0.4.13"
union-find = "0.4.3"
pyo3 = { version = "0.24.2", optional = true, features = ["extension-module"] }
log = "0.4.26"
strum = "0.27.1"
strum_macros = "0.27.1"
clap = { version = "4.5.31", features = ["derive"] }
num-traits = "0.2.19"


[package.metadata.maturin]
generate-pyi = true

[features]
# Default feature set
default = []

# Define 'python' feature that depends on pyo3 and includes 'cdylib' as a crate type
python = ["pyo3"]

[lib]
name = "maze_library"
path = "src/lib.rs"
crate-type = ["rlib"]  # Default library type

# Only include cdylib when the 'python' feature is enabled
[target.'cfg(feature = "python")'.lib]
crate-type = ["cdylib"]
